--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,13 @@ jobs:
       - run: npx pnpm i
       - run: npx pnpm build
       - run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout -b pkg
+          rm -r src
           git add dist -f
           git commit -m "build: $(git log --format="%H" -n 1) commit"
+          git remote set-url origin --push https://github-actions[bot]:${GITHUB_TOKEN}@github.com/parkingspace-commons.git
           git push origin pkg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
