--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,12 @@ jobs:
       - run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          export COMMIT_ID=$(git log --format="%H" -n 1)
           git checkout --orphan pkg
           rm -r src
           git add .
           git add dist -f
-          git commit -m "build: $(git log --format="%H" -n 1) commit"
+          git commit -m "build: ${COMMIT_ID} commit"
           git remote set-url origin --push https://github-actions[bot]:${GITHUB_TOKEN}@github.com/team-spacelab/parkingspace-commons.git
           git push origin pkg -f
         env:
