--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/typeorm": "^9.0.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -24,6 +25,7 @@
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
